manifests/kind/platform/monitoring/monitoring_gateway.networking.k8s.io_v1beta1_httproute_grafana.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
  - grafana.10.5.0.13.nip.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kube-prometheus
    sectionName: grafana
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: grafana
      namespace: monitoring
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
